--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
+    "react-dropzone": "^3.12.2",
     "react-router-dom": "^4.0.0"
   },
   "devDependencies": {
