--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.12.2",
+    "react-gif-player": "^0.2.2",
     "react-router-dom": "^4.0.0"
   },
   "devDependencies": {
