--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "firebase": "^3.7.4",
     "jquery": "^3.2.1",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
