--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.12.2",
     "react-gif-player": "^0.2.2",
+    "react-router": "^4.0.0",
+    "react-router-bootstrap": "^0.23.1",
     "react-router-dom": "^4.0.0"
   },
   "devDependencies": {
