--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-gif-player": "^0.2.2",
     "react-router": "^4.0.0",
     "react-router-bootstrap": "^0.23.1",
-    "react-router-dom": "^4.0.0"
+    "react-router-dom": "^4.0.0",
+    "reactfire": "^1.0.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
