--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "gif-gallery-player",
+  "homepage": "http://sdkclements.github.io/gif-gallery-player",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,12 +18,15 @@
     "reactfire": "^1.0.0"
   },
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
