--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gif-gallery-player",
-  "homepage": "http://sdkclements.github.io/gif-gallery-player",
+  "homepage": "http://sdkclements.github.io/gif-gallery-player/home",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
