--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "classnames": "^2.2.5",
+    "express": "^4.15.2",
     "firebase": "^3.7.4",
     "jquery": "^3.2.1",
+    "morgan": "^1.8.1",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
