--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.2.1",
     "morgan": "^1.8.1",
     "react": "^15.4.2",
+    "react-addons-create-fragment": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.12.2",
